reformatting of the jobTask page and corrected the Bid Price value that was not showing the correct dollar amount

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -186,6 +186,10 @@ section {
   width: 40%
 }
 
+.red {
+  color: red;
+}
+
 // html {
 //   font-size: inherit;
 //   height: 100%;
